--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -18,20 +18,19 @@ fra:
         public_interest_group: "Groupement d’intérêt public"
         sir: "Monsieur"
         syndicate: "Syndicat"
-    procedure:
-      nomen:
-        animal_treatment: "Traitement animal"
+    intervention:
+      procedure:
         animal_birth: "Naissance d’un animal"
+        animal_treatment: "Traitement animal"
         calving_one: "Vêlage unique"
         calving_twin: "Vêlage jumeaux"
         chemical_treatment: "Traitement chimique"
+        grains_harvest: "Moisson"
         mineral_fertilizing: "Fertilisation minérale"
         organic_fertilizing: "Fertilisation organique"
         plowing: "Labour"
-        seed_harvest: "Moisson"
+        raking: "Hersage"
         sowing: "Semis"
-        superficial_plowing: "Hersage"
-        wheat_crop: "Culture de blé (standard)"
     product:
       unit:
         celsius: "celsius"
