--- a/config/locales/fra/help/interventions-index.txt
+++ b/config/locales/fra/help/interventions-index.txt
@@ -1,9 +1,9 @@
-====== Procédures ======
+====== Interventions ======
 
-Les procédures permettent de saisir des opérations, évènements et indicateurs dans un cadre méthodologique et réglementaire.
+Les interventions permettent de saisir des opérations, évènements et indicateurs dans un cadre méthodologique et réglementaire.
 
 Elles utilisent diverses nomenclatures métiers et enregistrent les éléments de traçabilité précis lié aux produits.
 
-!!! Une procédure s'effectue dans le cadre d'une [[>backend/productions|production]]
+!!! Une intervention s'effectue dans le cadre d'une [[>backend/productions|production]].
 
->>> Ex : Semis de blé sur la parcelle culturale "Les gands pièces" dans le cadre de la production "Blé tendre 2013"
+>>> Ex : Semis de blé sur la parcelle culturale "Les grands pièces" dans le cadre de la production "Blé tendre 2013"
