--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -962,6 +962,7 @@ eng:
     input_conveyors: "Input conveyors" #?
     integer_value: "Integer value"
     # intervention: "Intervention"
+    # intervention_casts: "Intervention casts"
     # interventions: "Interventions"
     introduction: "Introduction"
     inventories: "Inventories" #?
