--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -702,6 +702,7 @@ fra:
     initial_number: "Numéro initial"
     integer_value: "Valeur entière"
     intervention: "Intervention"
+    intervention_casts: "Intervention casts"
     interventions: "Interventions"
     introduction: "Introduction"
     inventory: "Inventaire"
