--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -724,6 +724,7 @@ spa:
     # initial_number: "Numéro initial"
     # integer_value: "Valeur entière"
     # intervention: "Intervention"
+    # intervention_casts: "Intervention casts"
     # interventions: "Interventions"
     # introduction: "Introduction"
     # inventory: "Inventaire"
