update procedure name and translations in nomen.

--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -6,11 +6,14 @@ fra:
     chemical_treatment: "Traitement chimique"
     mineral_fertilizing: "Fertilisation minérale"
     organic_fertilizing: "Fertilisation organique"
+    plant_grinding: "Broyage de végétaux"
     plowing: "Labour"
-    seed_harvest: "Moisson"
+    grains_harvest: "Moisson"
     sowing: "Semis"
     superficial_plowing: "Hersage"
     wheat_crop: "Culture de blé (standard)"
+    animal_treatment: "Traitement animal"
+    raking: "Hersage"
   variables:
     cropper: "Moissonneuse batteuse"
     cropper_driver: "Conducteur de moissonneuse batteuse"
@@ -19,16 +22,20 @@ fra:
     fertilizer: "Engrais"
     fertilizer_to_spread: "Engrais à épandre"
     grains: "Grains"
+    grinder: "Broyeur"
     harrow: "Herse"
     land_parcel: "Parcelle"
     manure: "Fumier"
     manure_to_spread: "Fumier à épandre"
     molecule: "Molécule"
+    mother_animal: "Mère"
+    plant: "Plantes, Culture"
     plow: "Charrue"
     seeder: "Semoir"
     seeds: "Semences"
     seeds_to_sow: "Semence à semer"
     silo: "Silo"
+    sower: "Semoir"
     spreader: "Épandeur"
     straw: "Paille"
     tractor: "Tracteur"
