--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -19,18 +19,48 @@ fra:
         sir: "Monsieur"
         syndicate: "Syndicat"
     intervention:
-      procedure:
+      procedures:
         animal_birth: "Naissance d’un animal"
-        animal_treatment: "Traitement animal"
         calving_one: "Vêlage unique"
         calving_twin: "Vêlage jumeaux"
         chemical_treatment: "Traitement chimique"
-        grains_harvest: "Moisson"
         mineral_fertilizing: "Fertilisation minérale"
         organic_fertilizing: "Fertilisation organique"
+        plant_grinding: "Broyage de végétaux"
         plowing: "Labour"
-        raking: "Hersage"
+        grains_harvest: "Moisson"
         sowing: "Semis"
+        superficial_plowing: "Hersage"
+        wheat_crop: "Culture de blé (standard)"
+        animal_treatment: "Traitement animal"
+        raking: "Hersage"
+    intervention_cast:
+      variable:
+        cropper: "Moissonneuse batteuse"
+        cropper_driver: "Conducteur de moissonneuse batteuse"
+        culture: "Culture"
+        driver: "Conducteur"
+        fertilizer: "Engrais"
+        fertilizer_to_spread: "Engrais à épandre"
+        grains: "Grains"
+        grinder: "Broyeur"
+        harrow: "Herse"
+        land_parcel: "Parcelle"
+        manure: "Fumier"
+        manure_to_spread: "Fumier à épandre"
+        molecule: "Molécule"
+        mother_animal: "Mère"
+        plant: "Plantes, Culture"
+        plow: "Charrue"
+        seeder: "Semoir"
+        seeds: "Semences"
+        seeds_to_sow: "Semence à semer"
+        silo: "Silo"
+        sower: "Semoir"
+        spreader: "Épandeur"
+        straw: "Paille"
+        tractor: "Tracteur"
+        trailer: "Remorque"
     product:
       unit:
         celsius: "celsius"
