--- a/config/locales/fra/prints/veterinary_booklet.xml
+++ b/config/locales/fra/prints/veterinary_booklet.xml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="veterinary_booklet" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
 	<property name="ireport.zoom" value="0.9558924531310702"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="323"/>
+	<property name="ireport.y" value="0"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
 	<style name="Title" fontName="DejaVu Sans" fontSize="30" isBold="true" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
@@ -109,7 +109,7 @@
 	<field name="entity_breeding_number" class="java.lang.String">
 		<fieldDescription><![CDATA[ancestor::campaigns/@breeding-number]]></fieldDescription>
 	</field>
-	<field name="entity_adress" class="java.lang.String">
+	<field name="entity_address" class="java.lang.String">
 		<fieldDescription><![CDATA[ancestor::campaigns/@address]]></fieldDescription>
 	</field>
 	<field name="campaign_name" class="java.lang.String">
@@ -154,7 +154,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="b60f24a3-d657-4f3f-8872-1ce3bef0f9e0" style="address" x="0" y="251" width="786" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{entity_adress}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{entity_address}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
