--- a/config/locales/fra/help/equipments-index.txt
+++ b/config/locales/fra/help/equipments-index.txt
@@ -1,11 +1,5 @@
 ====== Matériel ======
 
-Vous avez le récapitulatif de tout **le matériel de production** que vous avez enregistré. En enregistrant votre matériel, vous pourrez enregistrer son utilisation durant les travaux ce qui vous permettra d'avoir un suivi et une idée de son usure potentielle.
+Vous avez le récapitulatif de tout **le matériel de production** que vous avez enregistré. En enregistrant votre matériel, vous pourrez enregistrer son utilisation durant les travaux ce qui vous permettra d'avoir un suivi analytique et une idée de son usure potentielle.
 
 Vous avez la possibilité d'accéder au **détail** d'un matériel (temps d'utilisation, usages...) en cliquant sur son nom.
-
-===== Réservoir =====
-
-**Un réservoir est un lieu de stockage ne pouvant contenir qu'un seul type de produit à la fois** (ex: une cuve de carburant, de vin)
-
-**Si vous créez un réservoir, vous devrez également sélectionnez le type de produit contenu** ansi que sa quantité maximum.
