--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -992,13 +992,19 @@ fra:
         screed_building: "Construction béton (silo, chape, terrasse)"
         seed: "Semence"
         silage: "Ensilage"
+        sower: "Semoir"
+        plow: "Charrue"
+        baler: "Botteleuse"
+        mower: "Faucheuse"
         small_equipment: "Petit matériel"
         sorghum_crop: "Culture de sorgho"
         spelt_wheat_crop: "Culture d'épeautre"
-        spread_renting: "Location de semoir"
+        spread_renting: "Location d'épandeur"
+        spreader: "Epandeur à engrais"
         straw: "Paille"
         sunflower_crop: "Culture de tournesol"
         technician: "Technicien"
+        hay_rake: "Andaineur"
         temporary_meadow_crop: "Culture de prairie temporaire"
         tractor: "Tracteur"
         trail: "Remorque"
