--- a/config/locales/fra/help/cultivable_land_parcels-index.txt
+++ b/config/locales/fra/help/cultivable_land_parcels-index.txt
@@ -5,6 +5,8 @@ Vous avez accès au récapitulatif de toutes vos parcelles culturales.
 Les parcelles culturales réprésentent le support d'implantation d'une culture.
 Elles comportent une ou plusieurs parcelles contiguës ou non.
 
-!!! Une parcelle cultuale comporte une ou plusieurs [[>backend/land_parcels|parcelles]].
+!!! Une parcelle culturale comporte une ou plusieurs [[>backend/land_parcels|parcelles]].
+
+>>> Une parcelle culturale est utilisée comme support d'une production végétale [[>backend/productions|production végétale]].
 
 
